Dark mode fix

--- a/source/sass/blocks/_map.scss
+++ b/source/sass/blocks/_map.scss
@@ -124,6 +124,7 @@
     &__edit{
         display: flex;
         justify-content: space-between;
+        margin-top: 40px;
 
         input{
             width: 49%;
